# ecs-rs

./: Cargo.toml
doc/: tutorial.md
src/: aspect.rs  component.rs  entity.rs  lib.rs  world.rs
src/manager/: event.rs  group.rs
src/system/: entity.rs  interact.rs  interval.rs  lazy.rs  mod.rs
tests/: general_tests.rs  serialisation_test.rs  tutorial_tests.rs
