[package]

name = "ecs"
version = "0.19.0"
authors = ["HeroesGrave"]
description = "An Entity Component System (ECS) Framework"
repository = "https://github.com/HeroesGrave/ecs-rs"
homepage = "https://github.com/HeroesGrave/ecs-rs"
license = "MIT"
readme = "README.md"
keywords = [
    "ecs",
    "entity",
    "component",
    "game",
]

[features]
# default = ["serialisation"] # Don't enable it by default yet
serialisation = ["cereal", "cereal_macros"]

[dependencies.cereal]
version = "*"
features = ["nightly"]
optional = true

[dependencies.cereal_macros]
version = "*"
optional = true
