[package]

name = "ecs"
version = "0.21.1"
authors = ["HeroesGrave"]
description = "An Entity Component System (ECS) Framework"
repository = "https://github.com/HeroesGrave/ecs-rs"
homepage = "https://github.com/HeroesGrave/ecs-rs"
license = "MIT"
readme = "README.md"
keywords = [
    "ecs",
    "entity",
    "component",
    "game",
]

[features]
# default = ["serialisation"] # Don't enable it by default yet
nightly = []
serialisation = ["cereal"]

[dependencies.cereal]
version = "*"
optional = true

# [dev-dependencies.cereal_macros] # Only works with nightly
# version = "*"

[dependencies]
vec_map = "*"
